--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,12 @@
 [tool.poetry]
 name = "TorchMiner"
 version = "0.1.0"
-description = "A Package To "
+description = "Run Torch With A Simple Miner"
 authors = ["InEase <inease28@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
