--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ tensorboardX = "^2.4.1"
 torch = "^1.10.0"
 tqdm = "^4.62.3"
 ipython = "^7.29.0"
+google-api-python-client = "^2.31.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
