--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,15 @@ authors = ["InEase <inease28@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.7.1,<4.0"
 matplotlib = "^3.5.0"
 tensorboardX = "^2.4.1"
-torch = "^1.10.0"
-tqdm = "^4.62.3"
-ipython = "^7.29.0"
+torch = "^1.8.0"
+tqdm = "^4.50.0"
+ipython = "^7.18.0"
 google-api-python-client = "^2.31.0"
+seaborn = "^0.11.2"
+pandas = "^1.3.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
