--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipython = "^7.18.0"
 google-api-python-client = "^2.31.0"
 seaborn = "^0.11.2"
 pandas = "^1.3.4"
+sklearn = "^0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
