--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ google-api-python-client = "^2.31.0"
 seaborn = "^0.11.2"
 pandas = "^1.3.4"
 sklearn = "^0.0"
+pylint = "^2.12.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
