--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ seaborn = "^0.11.2"
 pandas = "^1.3.4"
 sklearn = "^0.0"
 pylint = "^2.12.1"
+Pillow = "^8.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
