--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pandas = "^1.3.4"
 sklearn = "^0.0"
 pylint = "^2.12.1"
 Pillow = "^8.4.0"
+dvclive = "^0.6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
